--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -50,11 +50,15 @@
 .CardFooter {
     text-align: center;
     padding: 10px;
+    color: ghostwhite;
+    font-size: 14px;
 }
 
 .CardTitle {
     text-align: center;
     margin-bottom: 10px;
+    color: ghostwhite;
+    font-size: 17px;
 }
 
 .CardText {
@@ -91,8 +95,7 @@
     background-color: #f1f1f1;
     text-align: center;
     padding: 5px;
-    position: fixed;
-    bottom: 0;
     width: calc(91vw - 19px);
     font-size: 14px;
+    margin-top: auto; /* Może być użyte, jeśli jest w flexbox/grid */
 }
