--- a/src/components/client/ClientList.module.css
+++ b/src/components/client/ClientList.module.css
@@ -1,5 +1,5 @@
 .FormRow {
-    background-color: lightgray;
+    background-color: aliceblue;
     border-style: groove;
     font-size: large;
     margin: auto 100px auto 100px;
