--- a/src/components/client/ClientList.module.css
+++ b/src/components/client/ClientList.module.css
@@ -1,7 +1,10 @@
 .FormRow {
-    background-color: aliceblue;
+    background-color: white;
     border-style: groove;
     font-size: large;
     margin: auto 100px auto 100px;
     padding: 20px;
+}
+.FormRow:hover {
+    background-color: #f0f0f0; /* Efekt hover dla wierszy */
 }
