--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,6 @@
 :root{
-  --header: #619fc2;
-  --body:#38a6c2 ;
-  --border-color: black;
+  --header: #13f140;
+  --body: #56c238;
+  --border-color: #574040;
 }
 
